@@ -1,6 +1,6 @@
 Name: globus-ftp-control
 Maintainer: Mattias Ellert <mattias.ellert@fysast.uu.se>
-Source: http://www.globus.org/ftppub/gt6/packages/globus_ftp_control-6.6.tar.gz
+Source: http://toolkit.globus.org/ftppub/gt6/packages/globus_ftp_control-6.7.tar.gz
 
 
 Upstream-Authors: The Globus Alliance - http://www.globus.org/
